--- a/.gitmodules
+++ b/.gitmodules
@@ -4,6 +4,15 @@
 [submodule "bundle/fugitive.vim"]
 	path = bundle/fugitive.vim
 	url = https://github.com/tpope/vim-fugitive.git
+[submodule "bundle/haml.vim"]
+	path = bundle/haml.vim
+	url = https://github.com/tpope/vim-haml.git
+[submodule "bundle/surround.vim"]
+	path = bundle/surround.vim
+	url = https://github.com/tpope/vim-surround.git
+[submodule "bundle/markdown.vim"]
+	path = bundle/markdown.vim
+	url = https://github.com/tpope/vim-markdown.git
 [submodule "bundle/nerdtree.vim"]
 	path = bundle/nerdtree.vim
 	url = https://github.com/jtrim/nerdtree.git
