--- a/.gitmodules
+++ b/.gitmodules
@@ -61,3 +61,6 @@
 [submodule "bundle/vroom.vim"]
 	path = bundle/vroom.vim
 	url = https://github.com/skalnik/vim-vroom.git
+[submodule "bundle/jade.vim"]
+	path = bundle/jade.vim
+	url = https://github.com/digitaltoad/vim-jade.git
