--- a/.gitmodules
+++ b/.gitmodules
@@ -39,7 +39,7 @@
 	url = https://github.com/ervandew/supertab.git
 [submodule "bundle/slim.vim"]
 	path = bundle/slim.vim
-	url = https://github.com/bbommarito/vim-slim.git
+	url = https://github.com/slim-template/vim-slim.git
 [submodule "bundle/ack.vim"]
 	path = bundle/ack.vim
 	url = https://github.com/mileszs/ack.vim.git
