--- a/.gitmodules
+++ b/.gitmodules
@@ -31,3 +31,6 @@
 [submodule "bundle/coffeescript.vim"]
 	path = bundle/coffeescript.vim
 	url = https://github.com/kchmck/vim-coffee-script.git
+[submodule "bundle/ctrlp.vim"]
+	path = bundle/ctrlp.vim
+	url = https://github.com/kien/ctrlp.vim.git
