--- a/.gitmodules
+++ b/.gitmodules
@@ -49,3 +49,6 @@
 [submodule "bundle/rails.vim"]
 	path = bundle/rails.vim
 	url = https://github.com/tpope/vim-rails.git
+[submodule "bundle/dispatch.vim"]
+	path = bundle/dispatch.vim
+	url = https://github.com/tpope/vim-dispatch.git
